--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container text-center">
+    <h1 class="text text-center mb-3">Movie Rent System</h1>
+
+    <a class="btn btn-outline-primary" href="/movie">Admin Site</a>
+    <a class="btn btn-outline-success" href="/movie/list">Customer Site</a>
+</div>
